[package]
name = "counttree"
version = "0.1.0"
authors = ["Henry Corrigan-Gibbs <henrycg@csail.mit.edu>"]
edition = "2018"

[dependencies]
lazy_static = "1.4"
num-bigint = { version = "0.3", features = ["rand", "serde"] }
rand = "0.7.3"
rand_core = "0.5.1"
clap = "2.0"
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tarpc = { version = "0.30.0", features = ["full", "serde-transport", "tcp", "tokio1"]  }
tokio = { version = "=1.28.2", features = ["full", "macros"] }
env_logger = "0.6"
aes = "0.4.0"
aes-ctr = "0.4.0"
num = "0.2.1"
rayon = "1.3.1"
primal = "0.2.3"
zipf = "6.1.0"
bincode = "1.3"
aesni = "0.7.0"

